# ai-repo-security-scanner

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cleanup_root_stubs.ps1  pyproject.toml  pytest.ini  requirements.txt  scanner.py  scanner_test.pyc.2576643148576  utils.py
.github/workflows/: lint.yml  security_scan.yml  tests.yml
benchmark/: command_injection_safe.py  command_injection_vulnerable.py  deserialization_safe.py  deserialization_vulnerable.py  path_traversal_safe.py  path_traversal_vulnerable.py  secret_exposure_safe.py  secret_exposure_vulnerable.py  sql_injection_safe.py  sql_injection_vulnerable.py  weak_crypto_safe.py  weak_crypto_vulnerable.py
core/: __init__.py  ai_review.py  analyzer.py  models.py  normalize.py  repo_hygiene.py  risk.py  rule_registry.py  rules_engine.py  severity.py  taint_analysis.py
docs/: README.md
io_utils/: __init__.py  file_loader.py  patch_suggester.py  repo_loader.py
prompts/: __init__.py  security_prompts.py
reports/: __init__.py  html_report.py  json_report.py  markdown_report.py  sarif_report.py
rules/: __init__.py  config_rules.py  crypto_rules.py  python_rules.py  secrets_rules.py
rules/metadata/: rules.yaml
samples/: vulnerable_sample.py
tests/: test_analyzer.py  test_cli.py  test_hygiene.py  test_normalize.py  test_reports.py  test_risk.py  test_rule_registry.py  test_severity.py  test_taint.py
tools/: check_secrets.py
