[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-repo-security-scanner"
version = "1.0.0"
description = "Rule-based SAST and repository hygiene scanner for local source code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "AI Repo Security Scanner" }]
keywords = ["security", "sast", "static-analysis", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "PyYAML>=5.4",
    "python-dotenv",
    "GitPython",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
openai = ["openai"]

[project.scripts]
ai-repo-scanner = "scanner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "io_utils*", "reports*", "rules*", "prompts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-v -p no:cacheprovider"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
